@@ -40,6 +40,7 @@ Version 1.3-svn:
    * alpha blending is our first progressive parameter
    * units can now have a recruit animation that will be played on unit
    recruit.
+   * units now have idle animations when they arn't used for some time
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat 
  * multiplayer scenarios
